--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,35 @@
     <string name="app_name">Vacxinity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_notifications">Assistant</string>
+    <string name="title_settings">Settings</string>
+    <string name="log_in">Log In</string>
+    <string name="password">Password</string>
+    <string name="username">Email or Phone</string>
+    <string name="newaccount">Create new Account</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="re_enter_email">Re-enter Email or Phone</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="forgot_password">Forgot Password ?</string>
+    <string name="register">Register</string>
+    <string name="new_password">New Password</string>
+    <string name="old_password">Old Password</string>
+    <string name="re_enter_password">Re-enter Password</string>
+    <string name="sent_code">Sent Code</string>
+    <string name="enter_code">Enter Code</string>
+    <string name="full_name">Full Name</string>
+    <string name="gender">Gender</string>
+    <string name="address">Address</string>
+    <string name="pin_code">Pin Code</string>
+    <string name="phone_no">Phone no.</string>
+    <string name="aadhaar_no">Aadhaar No.</string>
+    <string name="done">Done</string>
+    <string name="note">Please enter your registered email address to get verification mail from Vacxinity team</string>
+    <string name="verify">Verify</string>
+    <string name="dummyText">Saif Ali</string>
+    <string name="change_personal_details">Change Personal Details</string>
+    <string name="thank_you_team_e_bin">Thank you team Vacxinity</string>
+    <string name="send_verification">Send Verification</string>
+    <string name="image">Image</string>
 </resources>
